--- a/kiss-css-website/index.html
+++ b/kiss-css-website/index.html
@@ -12,12 +12,12 @@
 </head>
 
 <body>
-    <header class="bg-onprimary">
+    <header>
         <kiss-navbar></kiss-navbar>
     </header>
     <main>
         <hgroup>
-            <h1 data-tooltip="Keep It Simple, Stupid."> --kiss-css:</h1>
+            <h1 class="color-primary" data-tooltip="Keep It Simple, Stupid."> --kiss-css:</h1>
             <div class="title2">
                 <ul>
                     <li>Highly Customizable HTML Reset Built with 100% CSS.</li>
@@ -28,9 +28,6 @@
                 </ul>
             </div>
         </hgroup>
-
-        <div role="document">
-        </div>
     </main>
     <footer><kiss-footer></kiss-footer></footer>
     <script type="module" src="js/navbar.js"></script>
