--- a/kiss-css-website/index.html
+++ b/kiss-css-website/index.html
@@ -8,6 +8,7 @@
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
     <link href="css/style.css" rel="stylesheet" type="text/css" />
+    <link href="css/global.css" rel="stylesheet" type="text/css" />
     <title>KISS CSS</title>
 </head>
 
