Add li to index.html

--- a/kiss-css-website/index.html
+++ b/kiss-css-website/index.html
@@ -26,6 +26,7 @@
                     <li>Integrates with Material Design for infinite color palettes at the snap of a finger.</li>
                     <li>Minimal Classes Enable Clean and Semantic HTML.</li>
                     <li>Responsive; looks great on every screen size.</li>
+                    <li>Light and Dark modes builtin.</li>
                 </ul>
             </div>
         </hgroup>
