Add theme.js and add theeme switcher button to every page

--- a/kiss-css-website/index.html
+++ b/kiss-css-website/index.html
@@ -34,6 +34,7 @@
     <footer><kiss-footer></kiss-footer></footer>
     <script type="module" src="js/navbar.js"></script>
     <script type="module" src="js/footer.js"></script>
+    <script type="module" src="js/theme.js"></script>
 </body>
 
 </html>
