Update tooltip placement in index.html and navbar.js

--- a/kiss-css-website/index.html
+++ b/kiss-css-website/index.html
@@ -18,7 +18,7 @@
     </header>
     <main>
         <hgroup>
-            <h1 class="color-primary" data-tooltip="Keep It Simple, Stupid."> --kiss-css:</h1>
+            <h1 class="color-primary" data-tooltip="Keep It Simple, Stupid." data-placement="right"> --kiss-css:</h1>
             <div class="title2">
                 <ul>
                     <li>Highly Customizable HTML Reset Built with 100% CSS.</li>
