Rename to RAD CSS

--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
 
     <link href="css/style.css" rel="stylesheet" type="text/css" />
     <link href="css/global.css" rel="stylesheet" type="text/css" />
-    <title>KISS CSS</title>
+    <title>RAD CSS - Home</title>
 </head>
 
 <body>
     <header>
-        <kiss-navbar></kiss-navbar>
+        <rad-navbar></rad-navbar>
     </header>
     <main>
         <hgroup>
-            <h1 class="color-primary" data-tooltip="Keep It Simple, Stupid." data-placement="right"> --kiss-css:</h1>
+            <h1 class="color-primary"> --rad-css:</h1>
             <div class="title2">
                 <ul>
                     <li>Highly Customizable HTML Reset Built with 100% CSS.</li>
@@ -31,7 +31,7 @@
             </div>
         </hgroup>
     </main>
-    <footer><kiss-footer></kiss-footer></footer>
+    <footer><rad-footer></rad-footer></footer>
     <script type="module" src="js/navbar.js"></script>
     <script type="module" src="js/footer.js"></script>
     <script type="module" src="js/theme.js"></script>
